# ubuntu_gstreamer

./: .bumpversion.cfg  .gitignore  Dockerfile  README.md  build.sh  config.h  gsttcp.h  gsttcpclientsrc.c  gsttcpclientsrc.h  gsttcpplugin.c  gsttcpsrcstats.c  gsttcpsrcstats.h  meson.build  run_client.sh  run_display.sh  run_server.sh
.devcontainer/: devcontainer.json
gst-libs/: meson.build
gst-libs/gst/: gettext.h  gst-i18n-plugin.h
src/: gst_vtpl_vms_plugin.c  gst_vtpl_vms_src.c  gst_vtpl_vms_src.h  vtpl_config.h  vtpl_vms_config.h
